--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,22 @@
 @import './reset.scss';
 
-::-webkit-scrollbar {/*隐藏滚轮*/
+::-webkit-scrollbar {
+  /*隐藏滚轮*/
   display: none;
+}
+
+input,
+textarea,
+button,
+select {
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  outline: 0;
+}
+
+button {
+  overflow: visible;
 }
 
 // mint-ui
@@ -12,5 +27,31 @@
   img {
     width: 100%;
     height: 5.14rem;
+  }
+}
+
+.peizhi {
+  width: 90%;
+  margin: auto;
+  font-size: 0.37rem;
+  div {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+  }
+  h3 {
+    height: 2rem;
+    line-height: 2.3rem;
+    font-size: 0.5rem;
+    border-bottom: 1px solid #ccc;
+  }
+  span {
+    font-size: 0.38rem;
+    color: #888;
+    margin-top: 0.3rem;
+    display: block;
+  }
+  p {
+    height: 0.55rem;
+    color: #888;
   }
 }
